src/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>IF(  MONTH(Order_Placed_Date__c) =  MONTH(TODAY()) , 10,00.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <displayFormat>Format O-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Order_Description__c</fullName>
        <label>Order Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Order_Placed_Date__c</fullName>
        <label>Order Placed Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Order Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Ship_Date__c</fullName>
        <label>Order Ship Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CompareOrderPlaceOrderShipDate</fullName>
        <active>true</active>
        <errorConditionFormula>Order_Placed_Date__c &gt;Order_Ship_Date__c</errorConditionFormula>
        <errorDisplayField>Order_Placed_Date__c</errorDisplayField>
        <errorMessage>OrderPlace Date is greater than OrderShipDate</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InvalidOrderStates</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Customer__r.State__c ,&quot;Maharashtra&quot;) ||   ISPICKVAL( Customer__r.State__c ,&quot;Gujrat&quot;)</errorConditionFormula>
        <errorMessage>Orders should not be placed from Customers belonging to Gujarat and Maharashtra and should give an error</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoEmptyOrderQuantity</fullName>
        <active>true</active>
        <errorConditionFormula>Order_Quantity__c &lt;=0</errorConditionFormula>
        <errorDisplayField>Order_Quantity__c</errorDisplayField>
        <errorMessage>Order quantity should always be greater than 0</errorMessage>
    </validationRules>
</CustomObject>